[gd_scene load_steps=16 format=4 uid="uid://bnw0ai4431pqi"]

[ext_resource type="Script" path="res://level/level.gd" id="1_q7ncf"]
[ext_resource type="PackedScene" uid="uid://d0sxlok03prqf" path="res://units/enemy_mob1.tscn" id="2_n1cf1"]
[ext_resource type="PackedScene" uid="uid://bcllpnc8g0ukd" path="res://units/enemy_mob3.tscn" id="3_xhtso"]
[ext_resource type="PackedScene" uid="uid://cff4nvaqee510" path="res://units/enemy_mob2.tscn" id="4_j6gv3"]
[ext_resource type="PackedScene" uid="uid://dwe1dpj5ydr26" path="res://gui/hud/hud.tscn" id="5_iy0qf"]
[ext_resource type="PackedScene" uid="uid://ydge52gon0gi" path="res://player/player.tscn" id="6_3revc"]
[ext_resource type="Texture2D" uid="uid://b8wpe2ty1bb4y" path="res://assets/sprites/world_tileset.png" id="7_ig6c7"]
[ext_resource type="Texture2D" uid="uid://d0l55kn4w8wku" path="res://assets/backgrounds/level1background.png" id="8_4bkbs"]
[ext_resource type="Texture2D" uid="uid://dw7binbrlcgq5" path="res://assets/sprites/Map/oak_woods_v1.0/oak_woods_tileset.png" id="8_78i2b"]
[ext_resource type="Texture2D" uid="uid://55kva3hoxsg0" path="res://assets/sprites/Map/Final/Tiles.png" id="9_d1go5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_slbh1"]
size = Vector2(37.5, 51.1256)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rrnrn"]
texture = ExtResource("7_ig6c7")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_iim1m"]
texture = ExtResource("8_78i2b")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
15:0/0 = 0
16:0/0 = 0
18:0/0 = 0
19:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
28:0/0 = 0
29:0/0 = 0
30:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
15:1/0 = 0
16:1/0 = 0
18:1/0 = 0
19:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
28:1/0 = 0
29:1/0 = 0
30:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
4:2/0 = 0
5:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
25:2/0 = 0
26:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
0:3/0 = 0
1:3/0 = 0
4:3/0 = 0
5:3/0 = 0
9:3/0 = 0
10:3/0 = 0
15:3/0 = 0
16:3/0 = 0
21:3/0 = 0
22:3/0 = 0
25:3/0 = 0
26:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
28:4/0 = 0
29:4/0 = 0
30:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
7:5/0 = 0
8:5/0 = 0
10:5/0 = 0
11:5/0 = 0
13:5/0 = 0
14:5/0 = 0
16:5/0 = 0
17:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
9:6/0 = 0
10:6/0 = 0
15:6/0 = 0
16:6/0 = 0
2:7/0 = 0
3:7/0 = 0
9:7/0 = 0
10:7/0 = 0
15:7/0 = 0
16:7/0 = 0
22:7/0 = 0
23:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
9:8/0 = 0
10:8/0 = 0
22:8/0 = 0
23:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
0:9/0 = 0
1:9/0 = 0
4:9/0 = 0
5:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
22:9/0 = 0
23:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
22:10/0 = 0
23:10/0 = 0
27:10/0 = 0
28:10/0 = 0
29:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
27:11/0 = 0
28:11/0 = 0
29:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
27:12/0 = 0
28:12/0 = 0
29:12/0 = 0
0:13/0 = 0
1:13/0 = 0
4:13/0 = 0
5:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
25:13/0 = 0
27:13/0 = 0
28:13/0 = 0
29:13/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
22:15/0 = 0
23:15/0 = 0
27:15/0 = 0
28:15/0 = 0
29:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
18:16/0 = 0
19:16/0 = 0
20:16/0 = 0
22:16/0 = 0
23:16/0 = 0
27:16/0 = 0
28:16/0 = 0
29:16/0 = 0
0:17/0 = 0
1:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
22:17/0 = 0
23:17/0 = 0
27:17/0 = 0
28:17/0 = 0
29:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
27:18/0 = 0
28:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
19:19/0 = 0
20:19/0 = 0
21:19/0 = 0
22:19/0 = 0
24:19/0 = 0
25:19/0 = 0
26:19/0 = 0
27:19/0 = 0
28:19/0 = 0
29:19/0 = 0
30:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
10:20/0 = 0
11:20/0 = 0
12:20/0 = 0
13:20/0 = 0
14:20/0 = 0
15:20/0 = 0
16:20/0 = 0
17:20/0 = 0
18:20/0 = 0
19:20/0 = 0
20:20/0 = 0
21:20/0 = 0
22:20/0 = 0
24:20/0 = 0
25:20/0 = 0
26:20/0 = 0
27:20/0 = 0
28:20/0 = 0
29:20/0 = 0
30:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
7:21/0 = 0
8:21/0 = 0
9:21/0 = 0
10:21/0 = 0
11:21/0 = 0
12:21/0 = 0
13:21/0 = 0
14:21/0 = 0
15:21/0 = 0
16:21/0 = 0
17:21/0 = 0
18:21/0 = 0
19:21/0 = 0
27:21/0 = 0
28:21/0 = 0
29:21/0 = 0
30:21/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_u26a2"]
texture = ExtResource("9_d1go5")
14:5/size_in_atlas = Vector2i(6, 3)
14:5/0 = 0
10:9/size_in_atlas = Vector2i(5, 5)
10:9/0 = 0
15:9/size_in_atlas = Vector2i(5, 5)
15:9/0 = 0
0:15/size_in_atlas = Vector2i(4, 5)
0:15/0 = 0
8:5/size_in_atlas = Vector2i(2, 7)
8:5/0 = 0
12:5/size_in_atlas = Vector2i(2, 3)
12:5/0 = 0
10:5/size_in_atlas = Vector2i(2, 3)
10:5/0 = 0
4:19/size_in_atlas = Vector2i(3, 3)
4:19/0 = 0
7:19/size_in_atlas = Vector2i(3, 3)
7:19/0 = 0
10:18/size_in_atlas = Vector2i(2, 4)
10:18/0 = 0
14:2/size_in_atlas = Vector2i(2, 3)
14:2/0 = 0
16:2/size_in_atlas = Vector2i(2, 3)
16:2/0 = 0
5:15/size_in_atlas = Vector2i(3, 3)
5:15/0 = 0
4:15/size_in_atlas = Vector2i(1, 3)
4:15/0 = 0
8:1/size_in_atlas = Vector2i(1, 3)
8:1/0 = 0
9:1/size_in_atlas = Vector2i(2, 3)
9:1/0 = 0
11:1/size_in_atlas = Vector2i(2, 3)
11:1/0 = 0
13:1/size_in_atlas = Vector2i(1, 3)
13:1/0 = 0
12:14/size_in_atlas = Vector2i(6, 6)
12:14/0 = 0
2:1/size_in_atlas = Vector2i(6, 6)
2:1/0 = 0
2:8/size_in_atlas = Vector2i(6, 2)
2:8/0 = 0
8:15/size_in_atlas = Vector2i(2, 3)
8:15/0 = 0
10:15/size_in_atlas = Vector2i(1, 3)
10:15/0 = 0
11:15/size_in_atlas = Vector2i(1, 3)
11:15/0 = 0

[sub_resource type="TileSet" id="TileSet_3xxd2"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_rrnrn")
sources/1 = SubResource("TileSetAtlasSource_iim1m")
sources/2 = SubResource("TileSetAtlasSource_u26a2")

[node name="Level3" type="Node2D"]
scale = Vector2(1.00413, 0.991191)
script = ExtResource("1_q7ncf")
mob_scene = ExtResource("2_n1cf1")
mob_scene2 = ExtResource("3_xhtso")
mob_boss = ExtResource("4_j6gv3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Hud" parent="CanvasLayer" instance=ExtResource("5_iy0qf")]
offset_top = 1.0
offset_bottom = 1.0
size_flags_vertical = 8

[node name="Player" parent="." instance=ExtResource("6_3revc")]
position = Vector2(-0.995887, 0)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(-296.774, 67.5954)
scale = Vector2(0.995887, 1.00614)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-17, -10.0273)
shape = SubResource("RectangleShape2D_slbh1")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(921.195, 65.5777)
scale = Vector2(0.995887, 1.00614)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(-17, -10.0273)
shape = SubResource("RectangleShape2D_slbh1")

[node name="TileMap" type="Node" parent="."]

[node name="Layer0" type="TileMapLayer" parent="TileMap"]
light_mask = 7
z_index = -1
use_parent_material = true
position = Vector2(8, 38)
scale = Vector2(1.09056, 1.05311)
tile_map_data = PackedByteArray("AAD4/wMAAgAIAAEAAAD7/wMAAgALAAEAAAD+/wMAAgAJAAEAAAACAAMAAgAOAAUAAAABAAAAAgAOAAIAAAACAP3/AgAKABIAAAAGAPv/AgAKABIAAAACAPv/AgAKABIAAAABAPn/AgAFAA8AAAD2/wMAAgALAAEAAAD0/wMAAgAMAAUAAADz/wUAAgAIAAUAAADy/wUAAgAIAAUAAADx/wUAAgAIAAUAAADw/wUAAgAIAAUAAADv/wUAAgAIAAUAAADy/wAAAgAAAA8AAADw/wAAAgAAAA8AAAAKAPj/AgAEABMAAAAGAAMAAgAOAAUAAAAGAAAAAgAKABIAAAAJAAMAAgAKAAUAAAALAAMAAgAMAAUAAAAPAAMAAgAOAAUAAAACAAAAAgAQAAIAAAAPAAAAAgAQAAIAAAAPAP7/AgAQAAIAAAAPAPv/AgAQAAIAAAD///n/AgAEAA8AAAAFAPn/AgAFAA8AAAANAPj/AgAFAA8AAAATAPj/AgAHABMAAAATAAMAAgALAAEAAAAWAAMAAgAIAAEAAAD3/wMAAgAIAAEAAAD5/wMAAgAJAAEAAAD8/wMAAgAIAAEAAAD9/wMAAgANAAEAAAAVAAMAAgANAAEAAAAUAAMAAgAIAAEAAAAXAAMAAgAIAAEAAAAYAAMAAgANAAEAAAAZAAMAAgANAAEAAAAaAAMAAgAIAAEAAAAbAAMAAgAIAAEAAAAcAAMAAgAIAAEAAAAdAAMAAgANAAEAAAD2/wUAAgACAAgAAAD3/wUAAgACAAgAAAD4/wUAAgACAAgAAAD5/wUAAgACAAgAAAD6/wUAAgACAAgAAAD7/wUAAgACAAgAAAD8/wUAAgACAAgAAAD9/wUAAgACAAgAAAD+/wUAAgACAAgAAAD//wUAAgACAAgAAAAAAAUAAgACAAgAAAABAAUAAgACAAgAAAAHAAUAAgACAAgAAAAIAAUAAgACAAgAAAAJAAUAAgACAAgAAAAKAAUAAgACAAgAAAALAAUAAgACAAgAAAAMAAUAAgACAAgAAAANAAUAAgACAAgAAAAOAAUAAgACAAgAAAAPAAUAAgACAAgAAAAVAAUAAgACAAgAAAAWAAUAAgACAAgAAAAXAAUAAgACAAgAAAAYAAUAAgACAAgAAAAZAAUAAgACAAgAAAAaAAUAAgACAAgAAAAbAAUAAgACAAgAAAAeAAMAAgAIAAEAAAAfAAMAAgAJAAEAAAAhAAMAAgALAAEAAAAjAAMAAgANAAEAAAAiAAMAAgAIAAEAAAAlAAMAAgAIAAEAAAAnAAMAAgAIAAEAAAAkAAMAAgANAAEAAAAmAAMAAgANAAEAAAAoAAMAAgAJAAEAAAArAAMAAgAOAAUAAAArAAAAAgAQAAIAAAAvAAMAAgAOAAUAAAAvAAAAAgAQAAIAAAAPAPj/AgAIAA8AAAARAPj/AgAKAA8AAAAIAPn/AgAKAA8AAAACAPn/AgAIAA8AAAAGAPn/AgAIAA8AAAADAPn/AgAKAA8AAAAHAPn/AgAKAA8AAAAQAPj/AgAKAA8AAAArAPz/AgAIAA8AAAApAPz/AgAEAA8AAAAqAPz/AgAKAA8AAAArAP7/AgAQAAIAAAAsAPz/AgAKAA8AAAAuAPv/AgAEABMAAAAvAP3/AgAQAAIAAAAxAPv/AgAFAA8AAAAzAPv/AgALAA8AAAAhAAUAAgACAAgAAAAjAAUAAgACAAgAAAAkAAUAAgACAAgAAAAlAAUAAgACAAgAAAAmAAUAAgACAAgAAAAnAAUAAgACAAgAAAAoAAUAAgACAAgAAAApAAUAAgACAAgAAAAqAAUAAgACAAgAAAArAAUAAgACAAgAAAAsAAUAAgACAAgAAAAtAAUAAgACAAgAAAAuAAUAAgACAAgAAAAvAAUAAgACAAgAAAA=")
tile_set = SubResource("TileSet_3xxd2")

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(-155.358, 78.6932)
scale = Vector2(0.995887, 1.00889)

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="RecurringMobTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="MobTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -1

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.2, 0.2)
motion_mirroring = Vector2(544, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(45, 1)
scale = Vector2(1.00413, 0.991191)
texture = ExtResource("8_4bkbs")

[node name="MobSpawnLocation" type="Marker2D" parent="."]
position = Vector2(82.6586, 73.6488)

[node name="BackButton" type="Button" parent="."]
visible = false
offset_left = -155.358
offset_top = 4.03555
offset_right = -110.359
offset_bottom = 35.0355
scale = Vector2(0.991327, 1)
text = "back"

[node name="Mob2SpawnLocation" type="Marker2D" parent="."]
position = Vector2(487.985, 72.6399)

[node name="BossSpawnLocation" type="Marker2D" parent="."]
position = Vector2(736.956, 56.4977)
scale = Vector2(1.16486, 1.16486)

[connection signal="spawn_mob" from="CanvasLayer/Hud" to="." method="_on_hud_spawn_ally_mob"]
[connection signal="health_changed" from="Player" to="CanvasLayer/Hud" method="_on_player_health_changed"]
[connection signal="player_died" from="Player" to="." method="on_player_died"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="RecurringMobTimer" to="." method="_on_recurring_mob_timer_timeout"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
